# aprendendo-ou-revisando

./: 02-criando_tabela.py  pyproject.toml
Python DB API/: 01-conexao.py  02-criando_tabela.py  03-inserir_dados_na_tabela.py  04-atualizando_dados.py  05-removendo_registros.py  06-registros_em_lote.py  07-consultando_registros.py  exceptions.py
flask-api-blog/: pyproject.toml
flask-api-blog/migrations/versions/: 4bfdc64981e9_add_roles_and_roles_audits_tables.py  65dc6f1b146f_initial_migrate.py  fdae8f75db9d_add_role_id_and_role_attributes_in_users.py
flask-api-blog/src/: app.py
flask-api-blog/src/audits/: __init__.py  role.py  user.py  utils.py
flask-api-blog/src/blueprints/: auth.py  role.py  user.py
flask-api-blog/src/blueprints/docs/: json.py  ui.py
flask-api-blog/src/models/: role.py  role_audit.py  user.py
flask-api-blog/src/repositories/: role.py  user.py
flask-api-blog/src/schemas/: auth.py  role.py  user.py  utils.py
flask-api-blog/src/services/: auth.py  role.py  user.py
flask-api-blog/tests/integration/: conftest.py
flask-api-blog/tests/integration/blueprints/: test_auth.py  test_role.py  test_user.py
html/00-meu-primeiro-html/: index.html
html/01-tags-de-texto/: index.html
html/02-listas/: index.html
html/03-links/: about.html  index.html
html/04-primeiro-projeto-html/: a-maior-honra.html  hosana.html  index.html  leao-de-juda.html  musicas.html  quem-e-esse.html
src/: app.py
src/blueprints/: user.py
src/blueprints/docs/: __init__.py
src/models/: uesr.py  user_audit.py
src/repositories/: user.py
